// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyButton renders correctly 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-mc90jq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-mc90jq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-mc90jq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mc90jq-StyledGhostButton:hover,
.css-mc90jq-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    aria-controls=":r0:"
    aria-describedby=":r0:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-mc90jq-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment large 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-yx3eqr-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-yx3eqr-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-yx3eqr-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-yx3eqr-StyledGhostButton:hover,
.css-yx3eqr-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    aria-controls=":r4:"
    aria-describedby=":r4:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-yx3eqr-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment medium 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-oqrlmz-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 40px;
  padding: 0 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-oqrlmz-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-oqrlmz-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-oqrlmz-StyledGhostButton:hover,
.css-oqrlmz-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    aria-controls=":r3:"
    aria-describedby=":r3:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-oqrlmz-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment neutral 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1xcp86l-StyledGhostButton:hover,
.css-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    aria-controls=":r6:"
    aria-describedby=":r6:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-1xcp86l-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment primary 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-mc90jq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-mc90jq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-mc90jq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mc90jq-StyledGhostButton:hover,
.css-mc90jq-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    aria-controls=":r5:"
    aria-describedby=":r5:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-mc90jq-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment small 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-mc90jq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-mc90jq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-mc90jq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mc90jq-StyledGhostButton:hover,
.css-mc90jq-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    aria-controls=":r2:"
    aria-describedby=":r2:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-mc90jq-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly sentiment xsmall 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-12e3oot-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-12e3oot-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-12e3oot-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-12e3oot-StyledGhostButton:hover,
.css-12e3oot-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    aria-controls=":r1:"
    aria-describedby=":r1:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-12e3oot-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with bordered 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-9jv194-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #8c40ef;
  color: #641cb3;
}

.css-9jv194-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-9jv194-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-9jv194-StyledOutlinedButton:hover,
.css-9jv194-StyledOutlinedButton:active {
  background: #e5dbfd;
  color: #521094;
  border: 1px solid #792dd4;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    aria-controls=":r8:"
    aria-describedby=":r8:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-9jv194-StyledOutlinedButton e112qvla1"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom class name 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-mc90jq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-mc90jq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-mc90jq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mc90jq-StyledGhostButton:hover,
.css-mc90jq-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    aria-controls=":rb:"
    aria-describedby=":rb:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="custom-class css-mc90jq-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom copied text 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-mc90jq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-mc90jq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-mc90jq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mc90jq-StyledGhostButton:hover,
.css-mc90jq-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    aria-controls=":ra:"
    aria-describedby=":ra:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-mc90jq-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with custom copy text 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-mc90jq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-mc90jq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-mc90jq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mc90jq-StyledGhostButton:hover,
.css-mc90jq-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    aria-controls=":r9:"
    aria-describedby=":r9:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-mc90jq-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CopyButton renders correctly with no border 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-mc90jq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
}

.css-mc90jq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-mc90jq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-mc90jq-StyledGhostButton:hover,
.css-mc90jq-StyledGhostButton:active {
  background: #e5dbfd;
  color: #521094;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    aria-controls=":r7:"
    aria-describedby=":r7:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    data-container-full-width="false"
    tabindex="0"
  >
    <button
      aria-label="Copy"
      class="css-mc90jq-StyledGhostButton e112qvla0"
      type="button"
    >
      <svg
        class="css-1d5u3w3-sizeStyles e1gt4cfo0"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6.02579 5.00735C6.01404 5.01987 5.99982 5.04507 5.99982 5.08363V13.4167C5.99982 13.4553 6.01404 13.4805 6.02579 13.493C6.02939 13.4968 6.03388 13.5 6.03388 13.5H12.7988C12.7988 13.5 12.8033 13.4968 12.8069 13.493C12.8187 13.4805 12.8329 13.4553 12.8329 13.4167V5.08363C12.8329 5.04507 12.8187 5.01987 12.8069 5.00735C12.8033 5.00351 12.7988 5.00033 12.7988 5.00033H6.03388C6.03388 5.00033 6.02939 5.00351 6.02579 5.00735ZM4.49982 5.08363C4.49982 4.25553 5.14051 3.50033 6.03104 3.50033H12.8017C13.6922 3.50033 14.3329 4.25553 14.3329 5.08363V13.4167C14.3329 14.2448 13.6922 15 12.8017 15H6.03104C5.14051 15 4.49982 14.2448 4.49982 13.4167V5.08363Z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M3.52597 2.50703C3.51423 2.51955 3.5 2.54474 3.5 2.58331V10.9164C3.5 11.3306 3.16421 11.6664 2.75 11.6664C2.33579 11.6664 2 11.3306 2 10.9164V2.58331C2 1.7552 2.64069 1 3.53122 1H10.3018C11.1924 1 11.8331 1.7552 11.8331 2.58331C11.8331 2.99752 11.4973 3.33331 11.0831 3.33331C10.6688 3.33331 10.3331 2.99752 10.3331 2.58331C10.3331 2.54474 10.3188 2.51955 10.3071 2.50703C10.3035 2.50318 10.299 2.5 10.299 2.5H3.53406C3.53406 2.5 3.52957 2.50318 3.52597 2.50703Z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
